// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dockerfile enableOtel rendering > renders opentelemetry-instrument CMD when enableOtel is true > Dockerfile-enableOtel-true 1`] = `
"FROM public.ecr.aws/docker/library/python:3.12-slim-trixie

RUN pip install --no-cache-dir uv

ARG UV_DEFAULT_INDEX
ARG UV_INDEX

WORKDIR /app

ENV UV_SYSTEM_PYTHON=1 \\
    UV_COMPILE_BYTECODE=1 \\
    UV_NO_PROGRESS=1 \\
    PYTHONUNBUFFERED=1 \\
    DOCKER_CONTAINER=1 \\
    UV_DEFAULT_INDEX=\${UV_DEFAULT_INDEX} \\
    UV_INDEX=\${UV_INDEX} \\
    PATH="/app/.venv/bin:$PATH"

RUN useradd -m -u 1000 bedrock_agentcore

COPY pyproject.toml uv.lock ./
RUN uv sync --frozen --no-dev --no-install-project

COPY --chown=bedrock_agentcore:bedrock_agentcore . .
RUN uv sync --frozen --no-dev

USER bedrock_agentcore

# AgentCore Runtime service contract ports
# https://docs.aws.amazon.com/bedrock-agentcore/latest/devguide/runtime-service-contract.html
# 8080: HTTP Mode
# 8000: MCP Mode
# 9000: A2A Mode
EXPOSE 8080 8000 9000

CMD ["opentelemetry-instrument", "python", "-m", "main"]
"
`;

exports[`Dockerfile enableOtel rendering > renders plain python CMD when enableOtel is false > Dockerfile-enableOtel-false 1`] = `
"FROM public.ecr.aws/docker/library/python:3.12-slim-trixie

RUN pip install --no-cache-dir uv

ARG UV_DEFAULT_INDEX
ARG UV_INDEX

WORKDIR /app

ENV UV_SYSTEM_PYTHON=1 \\
    UV_COMPILE_BYTECODE=1 \\
    UV_NO_PROGRESS=1 \\
    PYTHONUNBUFFERED=1 \\
    DOCKER_CONTAINER=1 \\
    UV_DEFAULT_INDEX=\${UV_DEFAULT_INDEX} \\
    UV_INDEX=\${UV_INDEX} \\
    PATH="/app/.venv/bin:$PATH"

RUN useradd -m -u 1000 bedrock_agentcore

COPY pyproject.toml uv.lock ./
RUN uv sync --frozen --no-dev --no-install-project

COPY --chown=bedrock_agentcore:bedrock_agentcore . .
RUN uv sync --frozen --no-dev

USER bedrock_agentcore

# AgentCore Runtime service contract ports
# https://docs.aws.amazon.com/bedrock-agentcore/latest/devguide/runtime-service-contract.html
# 8080: HTTP Mode
# 8000: MCP Mode
# 9000: A2A Mode
EXPOSE 8080 8000 9000

CMD ["python", "-m", "main"]
"
`;

exports[`TypeScript Dockerfile enableOtel rendering > omits instrumentation when enableOtel is false > Dockerfile-ts-enableOtel-false 1`] = `
"FROM public.ecr.aws/docker/library/node:22-slim

WORKDIR /app

ENV NODE_ENV=production \\
    DOCKER_CONTAINER=1

RUN userdel -r node 2>/dev/null || true
RUN useradd -m -u 1000 bedrock_agentcore

COPY package.json package-lock.json* ./
RUN npm ci --omit=dev || npm install --omit=dev

COPY --chown=bedrock_agentcore:bedrock_agentcore . .

USER bedrock_agentcore

# AgentCore Runtime service contract ports
# https://docs.aws.amazon.com/bedrock-agentcore/latest/devguide/runtime-service-contract.html
# 8080: HTTP Mode
# 8000: MCP Mode
# 9000: A2A Mode
EXPOSE 8080 8000 9000

CMD ["npx", "tsx", "main.ts"]
"
`;

exports[`TypeScript Dockerfile enableOtel rendering > preloads the ADOT Node distro when enableOtel is true > Dockerfile-ts-enableOtel-true 1`] = `
"FROM public.ecr.aws/docker/library/node:22-slim

WORKDIR /app

ENV NODE_ENV=production \\
    DOCKER_CONTAINER=1

RUN userdel -r node 2>/dev/null || true
RUN useradd -m -u 1000 bedrock_agentcore

COPY package.json package-lock.json* ./
RUN npm ci --omit=dev || npm install --omit=dev

COPY --chown=bedrock_agentcore:bedrock_agentcore . .

USER bedrock_agentcore

# AgentCore Runtime service contract ports
# https://docs.aws.amazon.com/bedrock-agentcore/latest/devguide/runtime-service-contract.html
# 8080: HTTP Mode
# 8000: MCP Mode
# 9000: A2A Mode
EXPOSE 8080 8000 9000

# Node has no \`opentelemetry-instrument\` equivalent, so the ADOT distro is
# preloaded instead. This registers the global tracer/meter providers before
# agent code runs, so spans from any third-party instrumentation library are
# exported rather than silently dropped.
ENV NODE_OPTIONS="--require @aws/aws-distro-opentelemetry-node-autoinstrumentation/register"

CMD ["npx", "tsx", "main.ts"]
"
`;
